[gd_scene load_steps=3 format=2]

[ext_resource path="res://General/Controls/MicroActorInventoryView/MicroActorInventoryView.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFCD/Items/EmptyItemSlot.png" type="Texture" id=5]

[node name="MicroActorInventoryViewRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="ItemSlotUpSprite" type="Sprite" parent="."]
position = Vector2( 24, 12 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ItemSlotLeftSprite" type="Sprite" parent="."]
position = Vector2( 8, 24 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ItemSlotRightSprite" type="Sprite" parent="."]
position = Vector2( 40, 24 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ItemSlotDownSprite" type="Sprite" parent="."]
position = Vector2( 24, 36 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
